// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "marginTop": -64,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "coursesLine",
          }
        }
        style={
          Object {
            "height": 80,
            "tintColor": "#C7CDD1",
            "width": 80,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 24,
              "fontWeight": "500",
              "marginTop": 32,
            },
          ]
        }
      >
        Learn React Native
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Object {
              "color": "#556572",
              "fontWeight": "600",
              "marginTop": 4,
            },
          ]
        }
      >
        rn 101
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`renders correctly 2`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "center",
          "marginTop": -64,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "coursesLine",
          }
        }
        style={
          Object {
            "height": 80,
            "tintColor": "#C7CDD1",
            "width": 80,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 24,
              "fontWeight": "500",
              "marginTop": 32,
            },
          ]
        }
      >
        Learn React Native
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#2D3B45",
              "fontFamily": "Lato-Regular",
              "fontSize": 16,
            },
            Object {
              "color": "#556572",
              "fontWeight": "600",
              "marginTop": 4,
            },
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</RCTSafeAreaView>
`;
